fixed typos and missed variable

--- a/templates/streams/streams-config.yml
+++ b/templates/streams/streams-config.yml
@@ -29,7 +29,7 @@ data:
       "kapacitor_username": "admin",
       "kapacitor_port": "9092",
       "ignore_auth": true,
-      "influxdb_token": "{{streams_influxdb_token"}}",
+      "influxdb_token": "{{streams_influxdb_token}}",
       "influxdb_bucket": "streams",
       "influxdb_org": "tapis"
     }
