--- a/templates/authenticator/authenticator-config.yml
+++ b/templates/authenticator/authenticator-config.yml
@@ -10,7 +10,7 @@ data:
       "primary_site_admin_tenant_base_url": "{{authenticator_service_url}}",
       "service_site_id": "{{authenticator_service_site_id}}",
       "service_tenant_id": "{{authenticator_service_tenant_id}}",
-      "service_name": "{{service_param["service_name}}",
+      "service_name": "{{authenticator_service_name}}",
       "tenants": {{authenticator_tenants|default(["dev", "admin"])|tojson}},
       "sql_db_url": "authenticator-postgres:5432/authenticator",
       "log_level": "{{authenticator_log_level|default(defaults["log_level"])}}"
