--- a/inputgen/inputdescs/tenants_desc.yml
+++ b/inputgen/inputdescs/tenants_desc.yml
@@ -11,13 +11,44 @@ tenants_image_pull_policy:
     - image_pull_policy
   default_var: image_pull_policy
 
+tenants_log_level:
+  description: Log level
+  source_vars: 
+    - tenants_log_level 
+    - tapis_log_level
+
+tenants_show_traceback:
+  description: Whether to show the full (Python) traceback in logs.
+  source_vars: 
+    - tenants_show_traceback
+    - tapis_show_traceback
+
+tenants_service_name:
+  description: The name of this service; should always be set to tenants.
+  value: tenants
+
+tenants_service_site_id:
+  description: The site_id where this tenants service is running.
+  source_vars:
+    - site_id
+
+tenants_service_tenant_id:
+  source_vars: 
+    - site_admin_tenant_id
+  description: The id of the admin tenant where this service is running.
+
 tenants_primary_site_admin_tenant_base_url:
   description: The base URL of the admin tenant in the primary site.
   example: https://admin.develop.tapis.io
   source_vars:
     - primary_site_admin_tenant_base_url
 
-tenants_service_site_id:
-  description:
+tenants_storage_class:
+  description: Kubernetes storage class to use for peristent volume claim used to persist data written by the Postgres database.
   source_vars:
-    - site_admin_tenant_id
+    - tenants_storage_class
+    - tapis_storage_class
+
+tenants_use_sk:
+  description: Whether this service should use the SK for checking authorization (NOTE - should always set to True in production).
+  value: true
