--- a/templates/meta/api/restheart-security.yml
+++ b/templates/meta/api/restheart-security.yml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: restheart-security
-        image: tapis/metaapi:{{meta_image_version"}}
+        image: tapis/metaapi:{{meta_image_version}}
         imagePullPolicy: Always
         env:
         - name: tapis.site.id
