--- a/templates/meta/api/restheart.yml
+++ b/templates/meta/api/restheart.yml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: restheart
-          image: tapis/tapis-meta-rh-server:{{meta_image_version"}}
+          image: tapis/tapis-meta-rh-server:{{meta_image_version}}
           imagePullPolicy: Always
           command: [ "java", "-Dfile.encoding=UTF-8", "-server", "-jar", "restheart.jar", "etc/restheart.yml", "--envFile", "etc/config.properties"]
           ports:
