--- a/templates/streams/kapacitor-config.yml
+++ b/templates/streams/kapacitor-config.yml
@@ -176,7 +176,7 @@ data:
       token = ""
       user-key = ""
       url = "https://api.pushover.net/1/messages.json"
-    {% for tenant, value in streams_tenant.items() %}
+    {% for tenant in streams_tenants %}
     [[httppost]]
       endpoint = "api-alert-{{tenant}}"
       url = "{{streams_tapis_base_url}}/v3/streams/alerts?tenant=dev"
