--- a/templates/tenants/tenants-config.yml
+++ b/templates/tenants/tenants-config.yml
@@ -6,7 +6,7 @@ data:
   tenants-config.json: |-
     {
       "primary_site_admin_tenant_base_url": "{{tenants_primary_site_admin_tenant_base_url}}",
-      "service_site_id": "{{tenants_service_site_id"}}",
+      "service_site_id": "{{tenants_service_site_id}}",
       "service_tenant_id": "{{tenants_service_tenant_id}}",
       "service_name": "{{tenants_service_name}}",
       "postgres_user": "{{tenants_postgres_user}}",
