actors, admin, apps template fixes

--- a/templates/actors/actors-config.yml
+++ b/templates/actors/actors-config.yml
@@ -7,7 +7,7 @@ data:
     {
       "server": "dev",
       "primary_site_admin_tenant_base_url": "{{actors_service_url}}",
-      "service_tenant_id": "actors_service_tenant_id}}",
+      "service_tenant_id": "{{actors_service_tenant_id}}",
       "service_name": "abaco",
       "service_password": "$env{SERVICE_PASSWORD}",
       "tenants": {{actors_service_tenants | tojson}},
@@ -21,7 +21,7 @@ data:
       "admin_mongo_pass": "$env{MONGO_PASSWORD}",
       "mongo_host": "actors-mongo",
       "mongo_port": 27017,
-      "mongo_tls": {{actors_mongo_tls}},
+      "mongo_tls": {{actors_mongo_tls|tojson}},
       "mongo_replica_set": true,
       "admin_rabbitmq_user": "admin",
       "admin_rabbitmq_pass": "$env{RABBITMQ_PASSWORD}",
@@ -57,8 +57,7 @@ data:
       "web_access_control": "jwt",
       "web_user_role": "Internal/everyone",
       "web_accept_nonce": true,
-      "web_tenant_name": "{{actors_web_tenant_name}}",
-      "web_apim_public_key": "{{actors_web_apim_public_key}},
+      "web_apim_public_key": "{{actors_web_apim_public_key}}",
       "web_show_traceback": false,
       "web_log_ex": 43200,
       "web_max_log_length": 1000000,
