--- a/templates/files/api.yml
+++ b/templates/files/api.yml
@@ -17,10 +17,10 @@ spec:
       labels:
         app: files-api
     spec:
-      {% if files_node_selector %}
+      {%- if files_node_selector %}
       nodeSelector:
         exempt: "{{files_node_selector}}"
-      {% endif%}
+      {%- endif%}
       containers:
       - name: files-api
         image: tapis/tapis-files:{{files_image_version}}
@@ -30,27 +30,27 @@ spec:
         ports:
         - name: "files-api"
           containerPort: 8080
-        {% if files_files_debug == true %}
+        {%- if files_files_debug == true %}
         - name: "files-debug"
           containerPort: 8000
-        {% endif %}
+        {%- endif %}
         envFrom:
         - configMapRef:
             name: files-environment-vars
         env:
-        {% if files_node_name == true %}
+        {%- if files_node_name == true %}
         - name: TAPIS_LOCAL_NODE_NAME
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
-        {% endif %}
-        {% if files_site_id == true %}
+        {%- endif %}
+        {%- if files_site_id == true %}
         - name: TAPIS_SITE_ID
           valueFrom:
             configMapKeyRef:
               name: files-config
               key: site_id
-        {% endif %}
+        {%- endif %}
         - name: TOKENS_SERVICE_URL
           valueFrom:
             configMapKeyRef:
