--- a/templates/files/pvc.yml
+++ b/templates/files/pvc.yml
@@ -4,7 +4,7 @@ kind: PersistentVolumeClaim
 metadata:
   labels:
     app: pgdata
-  name: files-pgdata
+  name: {{files_postgres_pvc}}
 spec:
   accessModes:
     - ReadWriteOnce
