--- a/templates/jobs/api/api.yml
+++ b/templates/jobs/api/api.yml
@@ -13,10 +13,10 @@ spec:
     spec:
       initContainers:
       automountServiceAccountToken: false
-      {% if jobs_node_selector == true %}
+      {%- if jobs_node_selector == true %}
       nodeSelector:
         exempt: "yes"
-      {% endif %}
+      {%- endif %}
       containers:
       - name: jobs-api
         image: tapis/jobsapi:{{jobs_image_version}}
@@ -31,12 +31,12 @@ spec:
         - name: debug
           containerPort: 6157
         env:
-        {% if jobs_node_name == true %}
+        {%- if jobs_node_name == true %}
         - name: tapis.local.node.name
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
-        {% endif%}
+        {%- endif%}
         - name: tapis.site.id
           valueFrom:
             configMapKeyRef:
