--- a/templates/jobs/workers/jobwkr-DefaultQueue.yml
+++ b/templates/jobs/workers/jobwkr-DefaultQueue.yml
@@ -13,21 +13,21 @@ spec:
     spec:
       initContainers:
       automountServiceAccountToken: false
-      {% if jobs_node_selector == true %}
+      {%- if jobs_node_selector == true %}
       nodeSelector:
         exempt: "yes"
-      {% endif%}
+      {%- endif%}
       containers:
       - name: jobs-wkr-defaultqueue
         image: tapis/jobsworker:{{jobs_image_version}}
         imagePullPolicy: Always
         env:
-        {% if jobs_node_name == true %}
+        {%- if jobs_node_name == true %}
         - name: tapis.local.node.name
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
-        {% endif%}
+        {%- endif%}
         - name: tapis.site.id
           valueFrom:
             configMapKeyRef:
