--- a/templates/meta/backup/mongo-backup-deployment.yml
+++ b/templates/meta/backup/mongo-backup-deployment.yml
@@ -36,9 +36,9 @@ spec:
             - name: MONGO_INITDB_ROOT_USERNAME
               value: restheart
           volumeMounts:
-            - name: {{meta_mongo_backup_pvc}}
+            - name: meta-mongo-backup-vol
               mountPath: /backup/
       volumes:
-        - name: {{meta_mongo_backup_pvc}}
+        - name: meta-mongo-backup-vol
           persistentVolumeClaim:
-            claimName: mongo-backup-claim0
+            claimName: {{meta_mongo_backup_pvc}}
