--- a/templates/proxy/nginx/nginx.conf
+++ b/templates/proxy/nginx/nginx.conf
@@ -78,7 +78,7 @@ http {
         # Edit the server_name the reflect the site domain.
         #server_name  _;
         #server_name *.develop.tapis.io;
-        server_name  {{proxy_nginx_server_name}}
+        server_name  {{proxy_nginx_server_name}};
         #server_name *.*.tapis.io;
     
         # Update these paths the correct cer and key files.
@@ -115,7 +115,8 @@ http {
     #    {
     #        rewrite https://tapis.io break;
     #    }
-        {% if "authenticator" in proxy_nginx_service_list %}
+
+        {%- if "authenticator" in proxy_nginx_service_list %}
         location /v3/oauth2
         {
     #        auth_request /_auth;
@@ -130,10 +131,10 @@ http {
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS';
                 add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Mx-ReqToken,X-Requested-With,x-tapis-token';
                 return 204;
-            }
-    
+            }    
         }
-        {% endif %}
+
+        {%- endif %}
         location /v3/site-router
         {
            # this location intentionally does NOT get an auth_request directive since the site-router endpoints IS the target of auth_request.
@@ -141,7 +142,8 @@ http {
            proxy_redirect off;
            proxy_set_header Host $host;
         }
-        {% if "security" in proxy_nginx_service_list %} 
+        
+        {%- if "security" in proxy_nginx_service_list %} 
         location /v3/security
         {
     #        auth_request /_auth;
@@ -149,8 +151,9 @@ http {
             proxy_redirect off;
             proxy_set_header Host localhost:5000;
         } 
-        {% endif %}
-        {% if "tenants" in proxy_nginx_service_list %}
+
+        {%- endif %}
+        {%- if "tenants" in proxy_nginx_service_list %}
         location /v3/tenants
         {
     
@@ -159,7 +162,8 @@ http {
             proxy_redirect off;
             proxy_set_header Host localhost:5000;
         }
-        {% endif %}
+
+        {%- endif %}
         location /_auth {
             internal;
            
@@ -184,7 +188,7 @@ http {
             proxy_pass https://admin.develop.tapis.io/v3/site-router/check;
           }
     
-        {% if "tenants" in proxy_nginx_service_list %}
+        {%- if "tenants" in proxy_nginx_service_list %}
         location /v3/sites
         {
     #        auth_request /_auth;
@@ -192,8 +196,9 @@ http {
             proxy_redirect off;
             proxy_set_header Host localhost:5000;
         }
-        {% endif %}
-        {% if "meta" in proxy_nginx_service_list %}
+        
+        {%- endif %}
+        {%- if "meta" in proxy_nginx_service_list %}
         location /v3/meta
         {
     #        auth_request /_auth;
@@ -201,8 +206,9 @@ http {
             proxy_redirect off;
             proxy_set_header Host localhost:5000;
         }
-        {% endif %}
-        {% if "streams" in proxy_nginx_service_list %}
+        
+        {%- endif %}
+        {%- if "streams" in proxy_nginx_service_list %}
         location /v3/streams
         {
     #        auth_request /_auth;
@@ -218,8 +224,9 @@ http {
                 return 204;
             }
         }
-        {% endif %}
-        {% if "files" in proxy_nginx_service_list %}
+        
+        {%- endif %}
+        {%- if "files" in proxy_nginx_service_list %}
         location /v3/files
         {
     #        auth_request /_auth;
@@ -228,8 +235,9 @@ http {
             proxy_set_header Host localhost:5000;
             client_max_body_size 50G;
         }
-        {% endif %}
-        {% if "systems" in proxy_nginx_service_list %}
+
+        {%- endif %}
+        {%- if "systems" in proxy_nginx_service_list %}
         location /v3/systems
         {
     #        auth_request /_auth;
@@ -237,8 +245,9 @@ http {
             proxy_redirect off;
             proxy_set_header Host localhost:5000;
         }
-        {% endif %}
-        {% if "tokens" in proxy_nginx_service_list %}
+
+        {%- endif %}
+        {%- if "tokens" in proxy_nginx_service_list %}
         location /v3/tokens
         {
             # we intentionally do NOT include an auth_request for Tokens because tokens only handles service requests.
@@ -246,8 +255,9 @@ http {
             proxy_redirect off;
             proxy_set_header Host localhost:5000;
         }
-        {% endif %}
-        {% if "jobs" in proxy_nginx_service_list %}
+
+        {%- endif %}
+        {%- if "jobs" in proxy_nginx_service_list %}
         location /v3/jobs
         {
     #        auth_request /_auth;
@@ -255,8 +265,9 @@ http {
             proxy_redirect off;
             proxy_set_header Host localhost:5000;
         }
-        {% endif %}
-        {% if "actors" in proxy_nginx_service_list %}
+
+        {%- endif %}
+        {%- if "actors" in proxy_nginx_service_list %}
         location /v3/actors
         {
     #        auth_request /_auth;
@@ -264,8 +275,9 @@ http {
             proxy_redirect off;
             proxy_set_header Host $host;
         }
-        {% endif %}        
-        {% if "apps" in proxy_nginx_service_list %}
+
+        {%- endif %}        
+        {%- if "apps" in proxy_nginx_service_list %}
         location /v3/apps
         {
     #        auth_request /_auth;
@@ -273,16 +285,18 @@ http {
             proxy_redirect off;
             proxy_set_header Host localhost:5000;
         }
-        {% endif %}
-        {% if "monitoring" in proxy_nginx_service_list %}
+
+        {%- endif %}
+        {%- if "monitoring" in proxy_nginx_service_list %}
         location /grafana/
         {
             proxy_pass http://monitoring-grafana:3000;
             proxy_redirect off;
             proxy_set_header Host $host;
         }
-        {% endif %}
-        {% if "pgrest" in proxy_nginx_service_list %}
+
+        {%- endif %}
+        {%- if "pgrest" in proxy_nginx_service_list %}
         location /v3/pgrest
         {
     #        auth_request /_auth;
@@ -290,8 +304,9 @@ http {
             proxy_redirect off;
             proxy_set_header Host $host;
         }
-        {% endif %}
-        {% if "notifications" in proxy_nginx_service_list %}
+
+        {%- endif %}
+        {%- if "notifications" in proxy_nginx_service_list %}
         location /v3/notifications
         {
     #        auth_request /_auth;
@@ -299,6 +314,7 @@ http {
             proxy_redirect off;
             proxy_set_header Host localhost:5000;
         }
-        {% endif %}
+
+        {%- endif %}
     }
 }
