skadmin, templates, streams, systems, tenants, tokens config sync

--- a/templates/skadmin/renew-sk-secret/renew-sk-secret.yml
+++ b/templates/skadmin/renew-sk-secret/renew-sk-secret.yml
@@ -13,9 +13,7 @@ spec:
         command: ["/tmp/renew-sk-secret-script"]
         #command: ["sleep","3600"]
         image: mrghort/skadminutil:latest
-        {% if skadmin_image_pull %}
-        imagePullPolicy: Always
-        {% endif %}
+        imagePullPolicy: {{skadmin_image_pull_policy}} 
         env:
         - name: VAULT_TOKEN
           valueFrom:
