--- a/templates/streams/streams-config.yml
+++ b/templates/streams/streams-config.yml
@@ -13,10 +13,10 @@ data:
       "service_admin_tenant_id": "{{streams_service_tenant_id}}",
       "service_tenant_id": "{{streams_service_site_id}}",
       "service_name": "{{streams_service_name}}",
-      "tenant": {{streams_tenant}},
-      "tenants": {{streams_tenants|default(["dev", "admin"])|tojson}},
-      "log_level": "{{streams_log_level|default("DEBUG")}}",
-      "show_traceback": {{streams_show_traceback|default("false")|tojson}},
+      "tenant": {{streams_tenant_info|tojson}},
+      "tenants": {{streams_tenants|tojson}},
+      "log_level": "{{streams_log_level}}",
+      "show_traceback": {{streams_show_traceback|tojson}},
       "chords_url": "http://chords-app:80",
       "chords_user_email": "streams@admin.tapis",
       "influxdb_host": "http://chords-influxdb2",
