--- a/templates/security/api/api.yml
+++ b/templates/security/api/api.yml
@@ -11,16 +11,13 @@ spec:
       labels:
         app: sk-api
     spec:
-      {% if security_auto_service %}
-      automountServiceAccountToken: {{security_auto_service}}
-      {% endif %}
       initContainers:
-      {% if security_renew_sk %}
+      {%- if security_renew_sk_script == true %}
       - name: renew-sk-secret
         command: ["/tmp/renew-sk-secret-script"]
         #command: ["sleep","3600"]
         image: mrghort/skadminutil:latest
-        imagePullPolicy: Always
+        imagePullPolicy: {{security_image_pull_policy}}
         env:
         - name: VAULT_TOKEN
           valueFrom:
@@ -31,11 +28,11 @@ spec:
         - name: renew-sk-secret
           mountPath: /tmp/renew-sk-secret-script
           subPath: renew-sk-secret-script
-      {% endif %}
+      {%- endif %}
       containers:
       - name: sk-api
         image: tapis/securityapi:{{security_image_version}}
-        imagePullPolicy: Always
+        imagePullPolicy: {{security_image_pull_policy}}
         ports:
         - name: tomcat1
           containerPort: 8000
@@ -88,11 +85,11 @@ spec:
 #        - name: tapis.log.directory
 #          value: "/opt/tomcat/logs"
         - name: CATALINA_OPTS 
-          value: "-Xms{{security_heap_min}}g -Xmx{{security_heap_max}}g -agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=6157 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.ssl.need.client.auth=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.rmi.port=6157 -Djava.rmi.server.hostname=sk-api-debug -Dcom.sun.management.jmxremote.local.only=false"
-      {% if security_volumes %}
+          value: "-Xms{{security_heap_min}} -Xmx{{security_heap_max}} -agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=6157 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.ssl.need.client.auth=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.rmi.port=6157 -Djava.rmi.server.hostname=sk-api-debug -Dcom.sun.management.jmxremote.local.only=false"
+      {%- if security_volumes %}
       volumes:
       - name: renew-sk-secret
         configMap:
           name: renew-sk-secret
           defaultMode: 0777
-      {% endif%}
+      {%- endif%}
