--- a/templates/proxy/proxy-config.yml
+++ b/templates/proxy/proxy-config.yml
@@ -9,7 +9,7 @@ data:
       "service_tenant_id": "{{proxy_service_tenant_id}}",
       "site_id": "{{proxy_site_id}}",
       "service_name": "{{proxy_service_name}}",
-      "service_tenant_base_url": "{{proxy_service_tenant_base_url}}",
+      "primary_site_admin_tenant_base_url": "{{proxy_primary_site_admin_tenant_base_url}}",
       "tenants": {{proxy_service_tenants|tojson}}
     }
 
